mini_template_macro/tests/create_modifier/argument_is_optional_and_default.rs
use mini_template_macro::create_modifier;

#[create_modifier(defaults::_o = false)]
fn modifier(s: String, _o: Option<bool>) -> String {
    s
}

fn main() {}